[project]
name = "psof"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "mypy>=1.15.0",
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.5",
    "uvicorn>=0.34.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
